Fix form controls overlapping map

--- a/app/map/issue/add/page.css
+++ b/app/map/issue/add/page.css
@@ -28,6 +28,7 @@
 }
 .add-issue-page.picking-location .form-controls {
   opacity: 0;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 600px) {
